# api/src/resources/flight/dto/get-flight-search.dto.ts
@@ -1,0 +1,23 @@
+import { IsOptional, IsString } from 'class-validator';
+
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+
+export class GetFlightSearchDTO {
+  @ApiProperty()
+  @IsString()
+  iata: string;
+
+  @ApiProperty()
+  @IsString()
+  icao: string;
+
+  @ApiPropertyOptional()
+  @IsString()
+  @IsOptional()
+  date?: string;
+
+  @ApiProperty()
+  @IsString()
+  timezone: string;
+}
+
